fixed issue with scrollbar despite overflow hidden using has selector

--- a/styles/homecard.scss
+++ b/styles/homecard.scss
@@ -113,3 +113,7 @@
 .timeboxingBackground {
     overflow: hidden;
 }
+
+body:has(.timeboxingBackground) {
+    overflow: hidden;
+}
